# Sensor-driver-template

./: CMakeLists.txt  LICENSE  README.md  demo
examples/: demo_main.c
include/hal/: hal_bus.h  hal_bus_fake.h  hal_log.h  hal_log_stdio.h  hal_time.h  hal_time_fake.h
include/sensor/: sensor.h
src/hal/: hal_bus_fake.c  hal_log_stdio.c  hal_time_fake.c
src/sensor/: sensor.c
tests/: test_sensor.c
